@startuml
class com.mycompany.eva2_1_herencia.EVA2_1_HERENCIA
class com.mycompany.eva2_1_herencia.Estudiante
class com.mycompany.eva2_1_herencia.Persona
class com.mycompany.eva2_1_herencia.Proveedor
com.mycompany.eva2_1_herencia.Estudiante --|> com.mycompany.eva2_1_herencia.Persona
com.mycompany.eva2_1_herencia.Proveedor --|> com.mycompany.eva2_1_herencia.Persona
@startuml
class Persona {
    - String nombre
    - String apellido
    - int edad
    
    + Persona()
    + Persona(String nombre, String apellido, int edad)
    
    + String getNombre()
    + void setNombre(String nombre)
    
    + String getApellido()
    + void setApellido(String apellido)
    
    + int getEdad()
    + void setEdad(int edad)
}

class Estudiante {
    - String noControl
    
    + String getNoControl()
    + void setNoControl(String noControl)
    + void imprimirDatos()
}

class Proveedor {
    - String rfc
    
    + Proveedor()
    + Proveedor(String nombre, String apellido, int edad, String rfc)
    
    + String getRfc()
    + void setRfc(String rfc)
    + void imprimirDatos()
}

Persona <|-- Estudiante
Persona <|-- Proveedor


@enduml